# napi-tokei

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  index.d.ts  index.js  license.txt  package.json  pnpm-lock.yaml  readme.md
.claude/: settings.local.json
.github/workflows/: CI.yml  ci.yml
__test__/: index.spec.ts
benchmark/: bench.ts
crates/tokei-core/: Cargo.toml  index.d.ts
crates/tokei-core/scripts/: genLang.cjs  languageType.txt
crates/tokei-core/src/: lang.rs  lib.rs
scripts/: build.mjs  fix-types.mjs  genLang.cjs  generate-types.mjs  list-languages.rs
src/: lang.rs  lib.rs
