[package]
edition = "2021"
name = "napi-tokei"
version = "1.1.0"
description = "Node binding for tokei, a fast code statistics tool"
license = "MIT"
repository = "https://github.com/kitschpatrol/napi-tokei"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "list-languages"
path = "scripts/list-languages.rs"

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
tokei = "14.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
