[package]
edition = "2021"
name = "napi-tokei"
version = "2.0.0"
description = "Node bindings for Tokei, a fast code counting tool."
license = "MIT"
repository = "https://github.com/kitschpatrol/napi-tokei"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "list-languages"
path = "scripts/list-languages.rs"

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
tokei = "14.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
